frontend/test/should_pass/computations_call.grg
foo(n1:Node, -e1:Edge->) : int
{
	def var res:int = 42;

	valloc();
	startTransaction();
	adjacent(n1);
	add(Edge, n1, n1);
	retype(n1, Node);
	min(max(res, 1), res);

	return(res);
}

rule r(n1:Node, -e1:Edge->) : (int)
{	
	modify {
		def var res:int = 42;
		
		eval { 
			valloc();
			startTransaction();
			adjacent(n1);
			add(Edge, n1, n1);
			retype(n1, Node);
			min(max(res, 1), res);
		}
		
		return (res);
	}
}
