frontend/test/should_fail/computations_do_while_003.grg
rule r : (int)
{	
	modify {
		def var res:int = 42;
		
		eval { 
			do {
				yield res = res - 1;
			} while(res > 1);
		}
		
		return (res);
	}
}
